--- a/Man.Rmd
+++ b/Man.Rmd
@@ -282,10 +282,10 @@ Contrary to the function `CP_permutation_test`, the number of simulation could b
 
 ### Description 
  
-This function allows to calculate the sequence diffeence ($SQ$) view metrics. For a point $i$  the formula is :
+This function allows to calculate the sequence diffeence ($SD$) view metrics. For a point $i$  the formula is :
 $$SD_k(i) = \frac{1}{2} \sum_{j \in V^l_k(i)}(k-\rho^l_i(j)).|\rho^l_i(j)-\rho^h_i(j)|+  \frac{1}{2} \sum_{j \in V^h_k(i)}(k-\rho^h_i(j)).|\rho^l_i(j)-\rho^h_i(j)| $$
 
-where $\rho^d_i(j)$ was previously defined and $V^d_k(i)$ is the $k-$neighborhood of $i$ in the $d$ dimension. This metric penalizes the non preservation of $j$'s rank between $D^l$ and $D^h$, and weights this penalization according $ij$'s  closeness.
+where $\rho^d_i(j)$ is the rank of $j$ in the neighborhood of $i$ at the level $k$ in the space $d$, and $V^d_k(i)$ is the $k-$neighborhood of $i$ in the space $d$. This metric penalizes the non preservation of $j$'s rank between $D^l$ and $D^h$, and weights this penalization according $ij$'s closeness.
 
 ### Usage
 
@@ -293,7 +293,7 @@ where $\rho^d_i(j)$ was previously defined and $V^d_k(i)$ is the $k-$neighborhoo
 
 ### Arguments
 
-* **l_data** : list of data frame whose structure is :
+* **l_data** : list of data frame whose structure is like  :
 
 | Sample_ID | x       | y        | ... |
 |-----------|---------|----------|-----|
@@ -301,7 +301,7 @@ where $\rho^d_i(j)$ was previously defined and $V^d_k(i)$ is the $k-$neighborhoo
 
 These data frames contain samples' coordinates which could be defined in $\mathbb{R^n}$.
 
-* **dataRef** : reference data frame whose structure is defined above.  
+* **dataRef** : reference data frame whose structure was defined above.  
 
 * **listK** : list k values
 
@@ -322,8 +322,8 @@ Each element contains $n$ SQ values, where $n$ is the number of common samles' I
 
 ### Description 
  
-This function allows to calculate $SQ$ values for several data frames and for differents k levels. Distributions of  
-means $SQ$ values by levels $k$ could be plot. Finally statistic tests could be computed if at least two $SQ$ vectors were calculated.
+This function allows to calculate $SD$ values for several data frames and for differents k levels. Distributions of  
+means $SD$ values by levels $k$ could be plot. Finally statistic tests could be computed if at least two $SD$ vectors were calculated.
 
 ### Usage
 
@@ -344,13 +344,13 @@ These data frames contain samples' coordinates which could be defined in $\mathb
 
 * **listK** : list k values
 
-* **colnames_res_df** : This optional argument allows to specify colnames of the returned data frame and also plot's legend if it was computed. If this argument is unsecified then the default values will be set to : V1,V2, ..., Vn (where $n$ is the length of `l_data`). 
+* **colnames_res_df** : This optional argument allows to specify colnames of the returned data frame and also plot's legend if it was computed. If this argument is unsecified then the default values will be set to : V1,V2, ..., Vn (where $n$ is the length of `l_data`). The reference data frame will be named "REF".
 
 * **filename** : This optional arguement allows to defined the filename on which results will be written. If this argument is unspecified then results will be returned and not written. If users choose a filename that ever exits in the current directory a incrementation to the filename will be done.
 
-* **graphics** : This boolean argument allows to computes plot. The plot represents means of $SQ$ values for the different $k$ levels and for the different data frames in `l_data`.
+* **graphics** : This boolean argument allows to computes plot. The plot represents means of $SD$ values for the different $k$ levels and for the different data frames in `l_data`.
 
-* **stats** :  This option allows to run statistic tests, it is available only if the number of defines method is higher at least equal to two, (*i.e* `l_data`'s length is $\geq 2$). If only two data frames were given as input via the `l_data`  then a Wilcoxon test will be computed to compare the distribution of the the means by k levels of absolute differences between $SQ$ values. If more than two methods were defined then  Wilcoxon paired tests are done.
+* **stats** :  This option allows to run statistic tests, it is available only if the number of defines method is higher at least equal to two, (*i.e* `l_data`'s length is $\geq 2$). If only two data frames were given as input via the `l_data`  then a Wilcoxon test will be computed to compare the distribution of the the means by k levels of absolute differences between $SD$ values. If more than two methods were defined then  Wilcoxon paired tests are done.
 
 ### Details 
 
@@ -362,11 +362,12 @@ These data frames contain samples' coordinates which could be defined in $\mathb
 
 According options activated the return list contains the following elements :
 
-* **Seq_df** : data frame containing a column with the samples' Id, a column correspoding to the levels k, and $n$ colunms of $SQ$ values. This data frame is written is a `filename` is defined.
+* **Seq_df** : data frame containing a column with the samples' Id, a column correspoding to the levels k, and $n$ colunms of $SD$ values. This data frame is written is a `filename` is defined.
 
-* **Seq_mean_by_k** : data frame containing the means of $SQ$ values by level $k$, and this each data frame defined in `l_data`.
+* **Seq_mean_by_k** : data frame containing the means of $SD$ values by level $k$, and this each data frame defined in `l_data`.
 
-* **WT** : Wilcoxon test's results,
+* **WT** : Wilcoxon test's results.
+
 * **pWT** :  Matrix of Wilcoxon paired tests' p.value.
 
 * **graphics** : GGplot if the graphic was computed.
@@ -383,7 +384,7 @@ This function displays the graphic of means of sequence difference values by k v
 
 ### Usage
 
-`Seq_graph_by_k  <-function (data_Seq, Names=NULL, list_col=NULL, data_diff_mean_K = NULL)`
+`Seq_graph_by_k  <-function (data_Seq, Names=NULL, list_col=NULL, data_diff_mean_K = NULL,  log = FALSE)`
 
 ### Arguments
 
@@ -401,6 +402,7 @@ This function displays the graphic of means of sequence difference values by k v
 
 * **data_diff_mean_K** : optional data frame contining means of SQ values by K level. If this argument is precised then means are not calculated. 
 
+* **log** : optional boolean argument, if it is turned to TRUE the representations will be done according a logarithmic scale.
 
 ### Value 
 
@@ -422,8 +424,8 @@ If means by k are not given as input then data will be automatically scaled. Oth
  
 Then this function tets the following hypothesis :
 
-$SQ$ values calculated on real data have the same distribution than the ones expected if data coordinates where randomly distributed.
-In order to do this $n$ simulations are realized. Acccording these simulations means by k values are calculated, and finally wilcoxon test is effected to compare the mean random distribution and the real one.
+$SD$ values calculated on real data have the same mean ranks than the ones expected if data coordinates where randomly distributed.
+In order to do this $n$ simulations are realized. Acccording these simulations means by k values are calculated. Finally wilcoxon test is effected to compare if the mean ranks obtained on random distribution is equal to the one obtained on the 'real data'.
 
 ### Usage
 
@@ -448,7 +450,7 @@ In order to do this $n$ simulations are realized. Acccording these simulations m
 
 ### Value 
 
-This function returns the Wilcoxon test's results.
+This function returns a list containing the Wilcoxon test's results and a graphic.
 
 ### Details 
 
@@ -470,11 +472,11 @@ Data are scaled before to be plot.
 
 ### Description 
  
-This function allows to calculate Moran Indexes, spatial autocorrelation indexes. Values are calculated for several variables according several projection and for differents k levels. Graphics of Moran Indexes distribution for each variable, could be computed. Finally significance test is computed according the Monte Carlo procedure. The hypothesis is : Does the observe spatial autocorrelation is greater than the one expected for random spatial distributions ?
+This function allows to calculate Moran Indexes, which is a spatial autocorrelation metric. Values are calculated for several variables according several projection and for differents k levels. Graphics of Moran Indexes distribution for each variable, could be displayed. Finally the significance tests are computed according the Monte Carlo procedure. The hypothesis is : Does the observed spatial autocorrelation is higher than the one expected for random spatial distributions ?
 
 ### Usage
 
-`moran_I_main <-function(l_coords_data , spatial_att, listK, nsim = 500, Stat=FALSE, Graph = FALSE)`
+`moran_I_main <-function(l_coords_data , spatial_att, listK, nsim = 500, Stat=FALSE, Graph = FALSE, methods_name = NULL)`
 
 ### Arguments
 
@@ -500,6 +502,8 @@ These data frames contain samples' coordinates which could be defined in $\mathb
 * **Stat** : optional boolean argument, if this argument is set to TRUE, then the significance test will be calculated.
 
 * **Graph** : optional boolean argument,  if this argument is set to TRUE, then the graphic of Moran Index distributions is drawn. This graphic depicts Moran Indexes distributions for each variable.
+
+* **methods_name** : optional argument, that could contain a list of characters, in order to define the plot's legend.
  
 ### Details 
 
